# MackanizedPythonFlasher

./: .gitattributes  .gitignore  LICENSE  README.md  flasher.py  flasher_cli.py  gmlan.py  gui_main.py  logger.py  main.py  pyinstaller.spec  pyproject.toml  read_all_pids.py  read_calibration.py  read_ecu.py  requirements.txt  run_web.py  test_flash.py  test_program_read_verify.py
adapters/: base_adapter.py  elm327.py  j2534.py  kvaser.py  mock_adapter.py  replay.py  socketcan.py  stn.py
application/commands/: base_command.py  flasher_commands.py
application/interfaces/: confirmation.py
application/operations/: __init__.py  read_operation.py  (+2 more)
docs/: EDC16C39_02_REVERSE_ENGINEERING.md  MEDC17_CHECKSUMS.md  TRIONIC_BENCH_RECOVERY.md  TRIONIC_FLASHING_RESEARCH.md
domain/: cancellation.py  checksum.py  clock.py  dtc_database.py  edc16c39.py  errors.py  memory_map.py  physical_write_readiness.py  protocol_metadata.py  trionic.py  trionic_firmware.py  trionic_release.py
ecus/: __init__.py  base_ecu.py  edc16c39.py  edc17c19.py  motronic96.py  motronic961.py  registry.py  trionic5.py  trionic7.py  trionic8.py
firmware/: __init__.py
gui/: can_trace_panel.py  main_window.py  qt_startup.py  styles.py  worker.py
infrastructure/: adapter_factory.py  can_logger.py  settings.py  telemetry.py
protocols/: base_protocol.py  factory.py
security/: edc16c39.py  seed_key.py  trionic.py
tests/: __init__.py  conftest.py  test_t5_checksums.py  test_t7_checksums.py  test_t8_checksums.py  test_t8_partitions.py
web/: package-lock.json  package.json  tsconfig.json
(+121 files in other folders)
